--- a/style.css
+++ b/style.css
@@ -358,6 +358,14 @@ button  {
     position: relative;
 }
 
+.mainProduct .product1 {
+    width: 48%;
+}
+
+.mainProduct .product2 {
+    width: 48%;
+}
+
 .mainProduct .product1 .innerProduct1 {
     margin-bottom: 40px;
 }
@@ -620,7 +628,7 @@ button  {
     outline: none;
 }
 
-.mainProduct .product3 img {
+.mainProduct .product3 button img {
     margin-left: 10px;
 }
 
@@ -632,6 +640,7 @@ button  {
 .mainGraphic .secondGraphic {
     display: flex;
     justify-content: space-between;
+    gap: 3rem;
 }
 
 .mainGraphic .secondGraphic .graphic {
@@ -1074,13 +1083,6 @@ button  {
         width: 100%;
     }
 
-    .mainProduct .product1 {
-        width: 100%;
-    }
-
-    .mainProduct .product2 {
-        width: 100%;
-    }
 
     .mainProduct .product2 .innerProduct1 {
         width: 100%;
